examples/test/testpolicy19533.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19533
  namespace: namespace115
spec:
  podSelector:
    matchLabels:
      key21: value0
      key35: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value15
          key15: value23
          key26: value16
      podSelector:
        matchLabels:
          key10: value26
          key3: value26
